--- a/front end/GetMyDriverCardApp/app/src/main/res/layout/dialog_user_signup.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/layout/dialog_user_signup.xml
@@ -6,7 +6,7 @@
     android:padding="5dp">
 
     <EditText
-        android:id="@+id/tv_email"
+        android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -15,7 +15,7 @@
         android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/tv_password"
+        android:id="@+id/et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -24,7 +24,7 @@
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/tv_confirm_password"
+        android:id="@+id/et_confirm_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -32,12 +32,29 @@
         android:hint="@string/confirm_password"
         android:inputType="textPassword" />
 
-    <Button
-        android:id="@+id/btn_add"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:textColor="@color/white"
-        android:text="@string/signup" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="18dp"
+            android:background="@drawable/rounded_button"
+            android:textColor="@color/white"
+            android:text="@string/cancel" />
+
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:background="@drawable/rounded_button"
+            android:textColor="@color/white"
+            android:text="@string/signup" />
+
+    </LinearLayout>
 
 </LinearLayout>
