--- a/front end/GetMyDriverCardApp/app/src/main/res/layout/dialog_user_signup.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/layout/dialog_user_signup.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -35,6 +36,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <Button
@@ -44,7 +46,8 @@
             android:layout_marginStart="18dp"
             android:background="@drawable/rounded_button"
             android:textColor="@color/white"
-            android:text="@string/cancel" />
+            android:text="@string/cancel"
+            tools:ignore="ButtonStyle" />
 
         <Button
             android:id="@+id/btn_add"
@@ -53,7 +56,8 @@
             android:layout_marginStart="10dp"
             android:background="@drawable/rounded_button"
             android:textColor="@color/white"
-            android:text="@string/signup" />
+            android:text="@string/signup"
+            tools:ignore="ButtonStyle" />
 
     </LinearLayout>
 
