--- a/front end/GetMyDriverCardApp/app/src/main/res/layout/activity_login.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/layout/activity_login.xml
@@ -16,11 +16,11 @@
         android:padding="8dp">
 
         <EditText
-            android:id="@+id/email_edittext"
+            android:id="@+id/username_edittext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:hint="@string/email"
+            android:hint="@string/username_hint"
             android:inputType="textEmailAddress" />
 
         <EditText
