--- a/front end/GetMyDriverCardApp/app/src/main/res/layout/dialog_user_signup.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/layout/dialog_user_signup.xml
@@ -7,13 +7,13 @@
     android:padding="5dp">
 
     <EditText
-        android:id="@+id/et_email"
+        android:id="@+id/et_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="@string/email_hint"
+        android:hint="@string/username_hint"
         android:layout_marginTop="5dp"
-        android:inputType="textEmailAddress" />
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/et_password"
