--- a/front end/GetMyDriverCardApp/app/src/main/res/drawable/rounded_button.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/drawable/rounded_button.xml
@@ -4,8 +4,8 @@
         android:color="#FFFFFF"/>
     <gradient
         android:angle="225"
-        android:startColor="@color/colorPrimaryDark"
-        android:endColor="@color/colorPrimary"/>
+        android:startColor="@color/primaryColorCyan"
+        android:endColor="@color/primaryDarkColorCyan"/>
     <corners
         android:bottomLeftRadius="7dp"
         android:bottomRightRadius="7dp"
