--- a/front end/GetMyDriverCardApp/app/src/main/res/values/colors.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#008577</color>
+
+    <!-- Dark Theme -->
+    <color name="primaryColorLime">#CDDC39</color>
+    <color name="primaryColorCyan">#00acc1</color>
+    <color name="primaryDarkColorCyan">#007c91</color>
+
 </resources>
