--- a/front end/GetMyDriverCardApp/app/src/main/res/layout/activity_home.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/layout/activity_home.xml
@@ -1,199 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0d98ba"
+    android:background="@color/primaryDarkColorCyan"
     android:orientation="vertical"
-    android:weightSum="10">
+    android:weightSum="7">
 
-    <RelativeLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2">
-
-        <TextView
-            android:id="@+id/textCardApp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="Demax"
-            android:textColor="@color/white"
-            android:textSize="34sp" />
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:text="Welcome"
+        android:textSize="44sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:paddingBottom="38dp"
+        android:paddingTop="24dp"
+        android:gravity="center" />
 
     <GridLayout
-        android:columnCount="2"
-        android:rowCount="2"
-        android:id="@+id/main_grid_view"
+        android:id="@+id/grid_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"
+        android:layout_weight="6"
+        android:columnCount="2"
+        android:rowCount="2"
+        android:layout_gravity="center"
         android:alignmentMode="alignMargins"
         android:columnOrderPreserved="false"
-        android:padding="14dp"
-        >
-
+        android:padding="14dp">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/my_profile_card_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_margin="16dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
-            
+
             <LinearLayout
-                 android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:orientation="vertical">
+
                 <ImageButton
-                    android:src="@drawable/ic_shortcut_person"
-                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/my_profile_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    />
+                    android:src="@drawable/ic_shortcut_person"
+                    android:background="@color/cardview_dark_background"
+                    android:layout_gravity="center"
+                    tools:ignore="ContentDescription" />
+
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="My Profile"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textStyle="bold" />
 
             </LinearLayout>
-
-            
-
 
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/new_request_card_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_margin="16dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
 
-
             <LinearLayout
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:orientation="vertical">
+
                 <ImageButton
+                    android:id="@+id/new_request_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:src="@drawable/ic_shortcut_credit_card"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:background="@color/cardview_dark_background"
+                    android:layout_gravity="center"
+                    tools:ignore="ContentDescription" />
+
                 <TextView
-                    android:text="Card Request"
-                    android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text="New Card Request"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
-
-
-
         </android.support.v7.widget.CardView>
 
-
         <android.support.v7.widget.CardView
+            android:id="@+id/my_requests_card_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_margin="16dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
 
             <LinearLayout
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:orientation="vertical">
+
                 <ImageButton
+                    android:id="@+id/my_requests_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:src="@drawable/ic_shortcut_cloud_download"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:background="@color/cardview_dark_background"
+                    android:layout_gravity="center"
+                    tools:ignore="ContentDescription" />
+
                 <TextView
-                    android:text="Requests review"
-                    android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:text="My Requests"
+                    android:textAlignment="center"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
-
-
-
 
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/home_logout_card_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_margin="16dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp">
 
             <LinearLayout
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:layout_margin="16dp"
-                android:orientation="vertical"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:layout_margin="16dp">
+
                 <ImageButton
-                    android:src="@drawable/ic_shortcut_keyboard_return"
-                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/home_logout_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_shortcut_keyboard_return"
+                    android:background="@color/cardview_dark_background"
+                    android:layout_gravity="center"
+                    tools:ignore="ContentDescription" />
+
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="Logout"
                     android:textAlignment="center"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="18sp"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
-
-
-
         </android.support.v7.widget.CardView>
 
-
-
-
     </GridLayout>
-
 
 </LinearLayout>
