home activity 2nd refactor + login fragment refactored

--- a/front end/GetMyDriverCardApp/app/src/main/res/layout/activity_home.xml
+++ b/front end/GetMyDriverCardApp/app/src/main/res/layout/activity_home.xml
@@ -149,7 +149,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/home_logout_card_view"
+            android:id="@+id/logout_card_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_rowWeight="1"
@@ -166,7 +166,7 @@
                 android:layout_margin="16dp">
 
                 <ImageButton
-                    android:id="@+id/home_logout_button"
+                    android:id="@+id/logout_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_shortcut_keyboard_return"
